--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires-python = "~=3.10.0"
 dependencies = [
     "faster-whisper>=1.2.0",
     "hf-xet>=1.1.7",
+    "pip-licenses>=5.5.0",
     "pyperclip>=1.9.0",
     "rich>=14.1.0",
     "streamlit>=1.48.1",
